fix: potential bug on chapter count
